# nurvai-core-engineering-challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml  steps.md
src/nurvai_pipeline/: alignment.py  cli.py  config.py  hand_tracking.py  io_loaders.py  pipeline.py  qa_render.py  schema.py  segmentation.py
tests/: test_alignment.py  test_hand_tracking_robustness.py  test_integration_smoke.py  test_segmentation.py
