[project]
name = "nurvai-pipeline"
version = "0.1.0"
description = "Egocentric session post-processing pipeline: sensor alignment, hand tracking, and action segmentation for VLA dataset enrichment."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pydantic>=2.6",
    "typer>=0.12",
    "opencv-python>=4.9",
    "mediapipe>=0.10.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
nurvai-pipeline = "nurvai_pipeline.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
